# tree-sitter-pacos

./: Cargo.toml  LICENSE  binding.gyp  grammar.js  package.json  readme.md
.github/workflows/: fuzz.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: constants.txt  enum.txt  fn.txt  for.txt  literal.txt  loop.txt  record.txt  statement.txt  trait.txt  types.txt
